--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <section class="section sec" id="section">
-    <ul class="sec__list">
+    <ul class="sec__list" id="sec-lis">
       <li class="sec__item" id="item1"></li>
       <li class="sec__item" id="item2"></li>
       <li class="sec__item" id="item3"></li>
